--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "stripe-tos",
   "version": "0.1.0",
+  "homepage": "https://primetheus.github.io/stripe-tos",
   "private": true,
   "dependencies": {
     "@stripe/react-stripe-js": "^2.1.0",
@@ -9,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -19,6 +21,8 @@
     "prettier": "^2.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
